--- a/Projeto Inicial/MoviesLib/MoviesLib/Base.lproj/Main.storyboard
+++ b/Projeto Inicial/MoviesLib/MoviesLib/Base.lproj/Main.storyboard
@@ -18,9 +18,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="k6Y-R7-a33">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="36"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="106" id="SK7-E5-aHE" customClass="MovieTableViewCell" customModule="MoviesLib" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="320" height="106"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="106"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SK7-E5-aHE" id="DSj-UL-7h3">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="105"/>
